adding filles and removing unnecessary filles

--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,3 +1,6 @@
 :root {
-  --backgroundColor: #F6F6F6;
+  --backgroundColor: #F8F9FD;
+  --colorPurple: #9055FF;
+  --colorBlack: #16161E;
+  --colorGrey: #888C98;
 }
