--- a/styles/vars.css
+++ b/styles/vars.css
@@ -2,5 +2,8 @@
   --backgroundColor: #F8F9FD;
   --colorPurple: #9055FF;
   --colorBlack: #16161E;
-  --colorGrey: #888C98;
+  --colorGrey: #ADB1BD;
+
+  --font-family-Montreal: Neue Montreal, Helvetica, sans-serif, Arial;
+  --font-family-Inter: Inter, Helvetica, sans-serif, Arial;
 }
