--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -83,3 +83,19 @@
   font-weight: 700;
   line-height: 3rem;
 }
+
+.whatsNew__total_title {
+  padding: 15rem 0rem 0rem 0rem;
+  font-size: 10rem;
+  font-weight: 700;
+  font-family: var(--font-family-Montreal);
+  color: var(--colorBlack);
+}
+
+.whatsNew__total_text {
+  padding: 5rem 0rem 15rem 0rem;
+  font-size: 2.5rem;
+  font-weight: 500;
+  font-family: var(--font-family-Inter);
+  color: #888C98;
+}
