--- a/pages/demos/suspense/demo.module.css
+++ b/pages/demos/suspense/demo.module.css
@@ -47,10 +47,12 @@
   font-family: var(--font-family-Inter);
   padding: 3rem 0rem;
   color: #888C98;
+  width: 90%;
 }
 
 .why_group_full {
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
   font-family: var(--font-family-Inter);
 }
 
@@ -93,3 +95,7 @@
   margin-top: 3.5rem;
   border-radius: 5rem;
 }
+
+.list {}
+
+.list_item {}
