--- a/pages/server_components.module.css
+++ b/pages/server_components.module.css
@@ -7,7 +7,7 @@
 }
 
 .picture_url_imports {
-  margin-bottom: 1.5rem;
+  margin: 1.5rem 0rem;
 }
 
 /* header */
@@ -56,4 +56,77 @@
 .explenation {
   background-color: white;
   padding: 0rem 40rem;
+}
+
+/* first part */
+.oneXtwo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10rem 0rem;
+  grid-column-gap: 10%;
+  border-bottom: 0.1rem solid #ADB1BD;
+}
+
+.title {
+  color: var(--colorBlack);
+  font-family: var(--font-family-Inter);
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 1.5rem;
+  width: 75%;
+  line-height: 4rem;
+}
+
+.text {
+  font-size: 2rem;
+  font-family: var(--font-family-Inter);
+  color: var(--colorBlack);
+  font-weight: 300;
+  line-height: 3.25rem;
+  width: 95%;
+}
+
+/* lists part partTwo */
+
+.spaceBetweenExplenation {
+  padding: 10rem 0rem;
+  border-bottom: 0.1rem solid grey;
+}
+
+.list {
+  list-style: disc;
+  padding-left: 5rem;
+  width: 85%;
+  line-height: 5rem;
+}
+
+.text_list {
+  font-size: 2rem;
+  font-family: var(--font-family-Inter);
+  color: var(--colorBlack);
+  font-weight: 300;
+  line-height: 3.5rem;
+}
+
+.explenation_Part_list {
+  padding-bottom: 5rem;
+}
+
+.steps_text {
+  padding: 5rem 0rem 1rem 0rem;
+  font-size: 2rem;
+  font-weight: 600;
+  width: 75%;
+  font-family: var(--font-family-Inter);
+  color: var(--colorBlack);
+  line-height: 3rem;
+}
+
+.quote {
+  font-family: var(--font-family-Inter);
+  font-size: 3.5rem;
+  font-weight: 600;
+  font-style: italic;
+  width: 75%;
+  line-height: 5rem;
 }
