--- a/pages/middleware.module.css
+++ b/pages/middleware.module.css
@@ -59,6 +59,13 @@
 }
 
 /* first part */
+.oneXtwo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10rem 0rem;
+  grid-column-gap: 10%;
+  border-bottom: 0.1rem solid #ADB1BD;
+}
 
 .title {
   color: var(--colorBlack);
@@ -79,3 +86,37 @@
   width: 95%;
 }
 
+/* lists part partTwo */
+
+.spaceBetweenExplenation {
+  padding: 10rem 0rem;
+  border-bottom: 0.1rem solid grey;
+}
+
+.list {
+  list-style: disc;
+  padding-left: 5rem;
+  width: 85%;
+  line-height: 5rem;
+}
+
+.text_list {
+  font-size: 2rem;
+  font-family: var(--font-family-Inter);
+  color: var(--colorBlack);
+  font-weight: 300;
+  line-height: 3.5rem;
+}
+
+.explenation_Part_list {
+  padding-bottom: 5rem;
+}
+
+.quote {
+  font-family: var(--font-family-Inter);
+  font-size: 3.5rem;
+  font-weight: 600;
+  font-style: italic;
+  width: 75%;
+  line-height: 5rem;
+}
