--- a/pages/server_components.module.css
+++ b/pages/server_components.module.css
@@ -130,3 +130,17 @@
   width: 75%;
   line-height: 5rem;
 }
+
+/* part four how to do */
+
+.steps_text_special {
+  padding: 3rem 0rem 1rem 0rem;
+  font-size: 2rem;
+  width: 75%;
+  font-family: var(--font-family-Inter);
+  color: var(--colorBlack);
+  line-height: 3rem;
+  font-weight: 600;
+}
+
+/* */
