--- a/pages/url_imports.module.css
+++ b/pages/url_imports.module.css
@@ -55,7 +55,7 @@
 /* full explenation */
 .explenation {
   background-color: white;
-  padding: 0rem 40rem;
+  padding: 0% 20%
 }
 
 /* first part */
