small adjustments the responsiveness of explenation page

--- a/components/index/navigation.module.css
+++ b/components/index/navigation.module.css
@@ -28,3 +28,7 @@
   padding-left: 5rem;
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 768px) {}
+
+@media screen and (max-width: 500px) {}
